Fix squire display in dark modes
- just hardcoded `white` display, until we connect squire to themes :-\

CP-3113

--- a/packages/components/components/editor/SquireEditor.scss
+++ b/packages/components/components/editor/SquireEditor.scss
@@ -2,6 +2,7 @@
 
 .simple-squire-editor.editor {
 	min-block-size: 14em;
+	background: white; // hardcoded until we un-hardcode it in squire.
 }
 
 .editor {
